k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:
      containers:
      - name: devsu-container
        image: demo-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
