k8s/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-app-service
spec:
  type: ClusterIP
  selector:
    app: devsu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-app-service
            port:
              number: 80
